--- a/catalog/templates/editItem.html
+++ b/catalog/templates/editItem.html
@@ -4,9 +4,9 @@
 		<br>
 		<h1>Edit Item: {{category_name}} | {{item_title}}</h1>
 		<h2>Title</h2><br>
-		<input type="text" name="title" value=""><br>
+		<input type="text" placeholder="{{item_title}}" name="title" value=""><br>
 		<h2>Description</h2><br>
-		<input type="text" name="description" value=""><br>
+		<input type="text" name="description" placeholder="Enter new description here."  value=""><br>
 		<h2>Category</h2><br>
 		<select name="category">
 			<option value=1>Soccer</option>
